--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Lab Week 4 - Activity.sln"
+    "dotnet.defaultSolution": "GRepository.sln"
 }
